--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-ul {
+ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,7 +6,7 @@ ul {
     background-color: #0000FB;
   }
   
-  li {
+ li {
     float: left;
   }
   
@@ -85,9 +85,28 @@ body {
   background:#ffff00
 }
 
-.ul1 {
+.ul {
   color: #0000FB;
   font-family: Arial Black;
   margin-left: auto;
   list-style-type: square;
+}
+
+h1 {
+  color: Black;
+  text-align: center;
+  padding: 14px 18px;
+  text-decoration: none;
+  font-size: 35px;
+  font-family: Arial Black;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.facebook h1 {
+  text-align: center;
+  font-size: 25px;
+
 }
