--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
 }
 
 h1 {
-  color: Black;
+  color: white;
   text-align: center;
   padding: 14px 18px;
   text-decoration: none;
@@ -103,16 +103,25 @@ h1 {
   margin-left: auto;
   margin-right: auto;
 
+
 }
 
 .facebook h1 {
+  color: white;
   text-align: center;
-  font-size: 25px;
-
+  padding: 14px 18px;
+  text-decoration: none;
+  font-size: 35px;
+  font-family: Arial Black;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-text-stroke: 1px black;
 }
 
 .bjobs img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+
 }
