--- a/css/style.css
+++ b/css/style.css
@@ -126,5 +126,19 @@ h1 {
 
 }
 
+.news h1 {
+  color: white;
+  text-align: center;
+  padding: 14px 18px;
+  text-decoration: none;
+  font-size: 25px;
+  font-family: Arial Black;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-text-stroke: 1px black;
+}
 
-
+body{
+  min-height:2000px;
+}
